--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@
 iframe {
   border: none;
   overflow: hidden;
+  align-content: middle;
 }
 
 .project-images {
@@ -108,14 +109,18 @@ a {
   color: turquoise;
 }
 
-.about {
-  font-size: 30px;
+.about-text {
+  font-size: 20px;
   width: 60vw;
-  margin-left: 10vw;
-  margin-top: 10vh;
+  margin-left: 15vw;
+  margin-top: 15px;
   text-align: left;
 }
 
+.about {
+  display: flex;
+  flex-direction: column;
+}
 .nav-item {
   font-size: 14pt;
   color: turquoise;
