--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  /* text-align: center; */
+  text-align: center;
   font-family: 'Lato', sans-serif;
 }
 
@@ -12,7 +12,9 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: purple;
+  position: fixed;
+  top: 0;
 }
 
 .App-title {
@@ -37,6 +39,7 @@
   /* flex-flow: row wrap; */
   flex-direction: column;
   justify-content: space-between;
+  padding-bottom: 45px;
 }
 
 .project-title {
@@ -68,6 +71,13 @@
   letter-spacing: 0.1em;
 }
 
+.nav-item:hover {
+  color: #00cec9;
+}
+
+/* a:hover {
+  color: #00cec9;
+} */
 .nav-left {
   width: 33vw;
   justify-self: left;
@@ -89,30 +99,33 @@
   justify-content: space-around;
 } */
 
-.footer {
+footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
-  bottom: 0px;
-  padding-bottom: 0px;
   width: 100%;
   height: 45px;
   background-color: white;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
-.resume {
-  height: 100vh;
-  width: 75vw;
+#resume {
+  /* height: 100vh;
+  width: 75vw; */
   background-color: white;
+  /* text-align: center; */
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 
 iframe {
   border: none;
   overflow: hidden;
   align-content: middle;
-  background-color: white;
 }
 
 .project-images {
@@ -127,6 +140,8 @@ a {
 .single-project {
   padding: 50px;
   color: #595959;
+  text-align: center;
+  /* margin-bottom: 50px; */
 }
 
 .project-description {
@@ -140,36 +155,35 @@ a {
 
 .contact {
   display: flex;
-  justify-content: center;
-  margin-left: 20px;
-  /* position: absolute;
-  bottom: 20px;
-  width: 100%;
-  height: 60px; */
-  /* align-items: center; */
-  /* position: fixed;
-  bottom: 10px; */
+  justify-content: left;
+  margin-left: 50px;
 }
 
 .contact-link {
-  padding: 20px;
+  padding-right: 20px;
   color: #595959;
   font-size: 9pt;
   letter-spacing: 0.1em;
+}
+
+.contact-link:hover {
+  color: #00cec9;
 }
 
 .all-about-text {
   display: flex;
   flex-direction: row;
   text-align: left;
+  margin-right: 10px;
 }
 
-#about-contact {
+/* #about-contact {
   position: relative;
-  left: 0px;
+  left: 100px;
   top: 5px;
-  text-align: left;
-}
+  text-align: center;
+  /* text-align: left;
+} */
 .about-text {
   font-size: 1em;
   width: 60vw;
@@ -215,6 +229,7 @@ a {
 #logo {
   font-family: 'Cinzel Decorative', cursive;
   font-size: 14pt;
+  color: #2d3436;
 }
 
 .line {
@@ -249,7 +264,7 @@ hr {
   background-color: #666;
 } */
 
-.fancy {
+/* .fancy {
   line-height: 0.5;
   text-align: center;
 }
@@ -262,8 +277,8 @@ hr {
   content: '';
   position: absolute;
   height: 5px;
-  border-bottom: 1px solid white;
-  border-top: 1px solid white;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
   top: 0;
   width: 600px;
 }
@@ -274,6 +289,17 @@ hr {
 .fancy span:after {
   left: 100%;
   margin-left: 15px;
+} */
+
+.fancy :before,
+.fancy :after {
+  content: '';
+  border-top: 0.1em solid black;
+  margin: 0 20px 0 0;
+  flex: 1 0 20px;
+}
+.fancy:after {
+  margin: 0 0 0 20px;
 }
 
 h2 {
@@ -288,3 +314,25 @@ h2 {
   margin-right: 25px;
   /* margin-top: 10px; */
 }
+
+.container {
+  /* background-color: #f2f5f9; */
+
+  position: relative;
+  min-height: 100%;
+  /* min-height: 100vh; */
+  /* padding-bottom: 15px; */
+}
+
+/* a {
+  height: 20px;
+} */
+
+/* hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+} */
