--- a/src/App.css
+++ b/src/App.css
@@ -229,7 +229,7 @@ a {
 #logo {
   font-family: 'Cinzel Decorative', cursive;
   font-size: 14pt;
-  color: #2d3436;
+  color: #595959;
 }
 
 .line {
@@ -247,7 +247,7 @@ a {
 #nav-logo:before,
 #nav-logo:after {
   content: '';
-  border-top: 0.1em solid;
+  border-top: 0.1em solid #595959;
   margin: 0 20px 0 0;
   flex: 1 0 20px;
 }
@@ -312,6 +312,7 @@ h2 {
   font-size: 9pt;
   letter-spacing: 0.1em;
   margin-right: 25px;
+  color: #595959;
   /* margin-top: 10px; */
 }
 
