--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
-
+/*
 .App-header {
   background-color: #222;
   height: 150px;
@@ -15,7 +15,7 @@
   color: purple;
   position: fixed;
   top: 0;
-}
+} */
 
 .App-title {
   font-size: 1.5em;
@@ -50,8 +50,8 @@
 }
 
 .project-image {
-  width: 30vw;
-  height: 30vh;
+  width: 40vw;
+  /* height: 30vh; */
 }
 
 .nav-bar {
@@ -60,15 +60,16 @@
   justify-content: space-between;
   align-items: center;
   background-color: white;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 .nav-item {
   font-size: 9pt;
   color: #595959;
-  margin: 0 10px 0 10px;
+  /* margin: 0 1em 0 0.1em; */
   letter-spacing: 0.1em;
+  padding: 0 1em 0 1em;
 }
 
 .nav-item:hover {
@@ -83,7 +84,7 @@ h1:hover {
   width: 33vw;
   justify-self: left;
   text-align: left;
-
+  margin-right: 0;
   /* margin-left: 40px; */
 }
 
@@ -172,10 +173,11 @@ a {
 }
 
 .all-about-text {
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: column;
   text-align: left;
-  margin-right: 10px;
+  margin-right: 10px; */
+  padding-top: 0;
 }
 
 /* #about-contact {
@@ -189,7 +191,7 @@ a {
   font-size: 1em;
   width: 60vw;
   margin-left: 50px;
-  margin-top: 80px;
+  margin-top: 100px;
   text-align: left;
   line-height: 1.5em;
 }
@@ -203,19 +205,23 @@ a {
   flex-direction: row;
 }
 
-.headshot {
+.headshot-container {
   margin-left: 80px;
   margin-top: 120px;
+}
+
+.headshot {
   height: 200px;
 }
 
 .technology-list {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .technology {
-  margin: 0 5px 0 5px;
+  margin: 8px 5px 0 5px;
   padding: 5px;
   border: 1px #22a6b3 solid;
   border-radius: 5px;
@@ -231,7 +237,7 @@ a {
 
 #logo {
   font-family: 'Cinzel Decorative', cursive;
-  font-size: 14pt;
+  font-size: 1.18em;
   color: #595959;
 }
 
@@ -241,7 +247,7 @@ a {
 
 #nav-logo {
   display: flex;
-  width: 30%;
+  width: 30vw;
   justify-content: center;
   align-items: center;
   /* text-align: center; */
@@ -251,11 +257,11 @@ a {
 #nav-logo:after {
   content: '';
   border-top: 0.1em solid #595959;
-  margin: 0 20px 0 0;
-  flex: 1 0 20px;
+  margin: 0 1.2em 0 0;
+  flex: 1 0 1.2em;
 }
 #nav-logo:after {
-  margin: 0 0 0 20px;
+  margin: 0 0 0 1.2em;
 }
 
 /*
@@ -340,3 +346,60 @@ h2 {
   margin: 1em 0;
   padding: 0;
 } */
+
+@media only screen and (max-width: 870px) {
+  .about {
+    flex-direction: column;
+    padding-bottom: 100px;
+    margin-left: 10vw;
+    /* align-items: center; */
+  }
+  .about-text {
+    margin-top: 20px;
+  }
+  /* .all-about-text {
+    align-items: center;
+    padding-top: 0;
+  } */
+
+  .headshot-container {
+    margin-left: 50px;
+    margin-top: 50px;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  body {
+    background-color: lightblue;
+  }
+  #logo {
+    font-size: 0.8em;
+  }
+  .nav-item {
+    font-size: 7pt;
+  }
+  #nav-logo {
+    width: 20vw;
+  }
+  #nav-logo:before,
+  #nav-logo:after {
+    content: '';
+    border-top: 0.1em solid #595959;
+    margin: 0 0.35em 0 0;
+    flex: 1 0 1.2em;
+  }
+  #nav-logo:after {
+    margin: 0 0 0 0.35em;
+  }
+  .headshot {
+    height: 180px;
+  }
+
+  .about-text {
+    font-size: 0.9em;
+    margin-top: 50px;
+  }
+  h2 {
+    font-size: 2.4em;
+  }
+}
