--- a/src/App.css
+++ b/src/App.css
@@ -119,15 +119,28 @@ footer {
   /* height: 100vh;
   width: 75vw; */
   background-color: white;
-  /* text-align: center; */
+  /* padding-bottom: 10px; */
+
   /* margin-left: auto;
   margin-right: auto; */
 }
 
-iframe {
+.iframe-container {
   border: none;
-  overflow: hidden;
+  /* overflow: hidden; */
   align-content: middle;
+  position: relative;
+  padding-top: 100%;
+  /* padding-bottom: 150px; */
+}
+
+.iframe-container iframe {
+  border: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 .project-images {
@@ -348,6 +361,9 @@ h2 {
 } */
 
 @media only screen and (max-width: 870px) {
+  body {
+    /* background-color: palegreen; */
+  }
   .about {
     flex-direction: column;
     padding-bottom: 100px;
@@ -366,18 +382,24 @@ h2 {
     margin-left: 50px;
     margin-top: 50px;
   }
+  /* iframe {
+    height: 500;
+    width: 500;
+  } */
 }
 
 @media only screen and (max-width: 550px) {
   body {
-    background-color: lightblue;
+    /* background-color: lightblue; */
   }
   #logo {
     font-size: 0.8em;
   }
-  .nav-item {
+  .nav-item,
+  .contact-link {
     font-size: 7pt;
   }
+
   #nav-logo {
     width: 20vw;
   }
